--- a/index.html
+++ b/index.html
@@ -25,12 +25,13 @@
         <img class="home-imagem" src="pag/colégio ccm.png.jpeg" alt="imagem do ccm">
     </section>
     <section class="About Us">
-        <h2 class="estudante-titulo">O que pensam sobre o colégio Semiramis?</h2>
+        <h2 class="estudante-titulo">o que gostariam de melhorar na escola?</h2>
 
         <div class="estudante-div">
             <img class="estudante-imagem" src="pag/professor Renan.jpeg" alt="foto do professor Renan">
-            <h3 class="estudante-nome">Professor Renan</h3>
-            <p class="opinião-texto">kjldkjwkfhwfhlsdhihldhlkshlhsdlfh</p>
+            <h3 class="estudante-nome">Professor Renan- Educação física</h3>
+            <p class="opinião-texto">estrutura esportiva</p>
+                        <p class="opinião-texto">caixas de som para melhor comunicação interna</p>
             
         </div>
         <div class="estudante-div">
